--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -19,7 +19,7 @@
             app:toolbarId="@+id/toolbar">
 
             <ImageView
-                android:id="@+id/app_bar_image"
+                android:id="@+id/musicIcon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="false"
